--- a/galery.html
+++ b/galery.html
@@ -66,7 +66,7 @@
 
             <div class="card gallery-card">
                 <video controls>
-                    <source src="ag.mp4" type="video/mp4">
+                    <source src="vid.mp4" type="video/mp4">
                 </video>
                 <p>Video Project 2</p>
             </div>
